--- a/lab3/package.json
+++ b/lab3/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel src/index.html",
     "build": "parcel build src/index.html",
-    "lab":"parcel lab/index.html"
+    "lab":"parcel lab3/lab/index.html"
   },
   "keywords": [],
   "author": "",
